# go-it-web-hw12-RESTAPI

./: README.md  main.py  pyproject.toml
client_rest/: index.html  logout.html  main.html
client_rest/javascript/: logout.js
migrations/versions/: 489140672425_add_users.py  ad19eb886730_init.py
src/: schemas.py
src/database/: models.py
src/repository/: users.py
src/routes/: auth.py  clients.py
src/services/: auth.py
