[tool.poetry]
name = "go-it-web-hw11-restapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = {extras = ["standart"], version = "^0.22.0"}
sqlalchemy = "^2.0.13"
alembic = "^1.11.0"
psycopg2 = "^2.9.6"
jinja2 = "^3.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
